[tool.poetry]
name = "guester"
version = "0.1.0"
description = ""
authors = ["vladislav <gnatyuk.vladislav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "==3.10"
aiogram = "==2.25.1"
instagrapi = "==1.17.10"
pillow = "==10.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
